	* src/modules/x400p-ss7/sl_x400p.c: PPA handling
	* src/modules/x400p-ss7/x100p-ss7.c: PPA handling
	* src/modules/x400p-ss7/x400p-ss7.c: PPA handling
	* src/test/sl/test-q781.c: PPA handling
	* src/test/x400p-ss7/test-x100p.c: PPA handling
	* src/test/x400p-ss7/test-x400p.c: PPA handling
	* src/util/sdlconf.c: PPA handling
	* src/util/slmon.c: PPA handling
	* src/util/ss7capd.c: PPA handling

2007-08-06  Brian Bidulock  <bidulock@openss7.org>

	* doc/man/man4/sccp.4.man: rework of SDL-, SDT-, SL-PMOD
	* doc/man/man4/tcap.4.man: rework of SDL-, SDT-, SL-PMOD
	* src/modules/sdl/sdl_pmod.c: rework of SDL-, SDT-, SL-PMOD
	* src/modules/sdt/sdt_pmod.c: rework of SDL-, SDT-, SL-PMOD
	* src/modules/sl/sl-mux.c: rework of SDL-, SDT-, SL-PMOD
	* src/modules/sl/slpmod.c: rework of SDL-, SDT-, SL-PMOD

2007-08-03  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am:
	  - add q784 test file
	  - add mtp sccp isup and tcap to public release
	  - add mtp_mod, sccp_mod, tr_mod and tc_mod minimal modules
	  - add newer sl-mux driver
	* doc/man/strss7.refs: update references
	* doc/man/man4/mtp.4.man: update documentation
	* doc/man/man4/sccp.4.man: update documentation
	* doc/man/man4/tcap.4.man: update documentation
	* doc/man/man4/tcap_ioctl.4.man: update documentation
	* doc/manual/news.texi: correct node names
	* doc/manual/strss7.texi: remove things from other packages
	* doc/projects/Makefile.am: add cnam figures
	* doc/projects/cnam.texi: update cnam project doc
	* doc/projects/cnam_iface.fig: update cnam project doc
	* doc/projects/cnam_m2ua.fig: update cnam project doc
	* doc/projects/cnam_m3ua.fig: update cnam project doc
	* doc/projects/cnam_netarch.fig: update cnam project doc
	* doc/projects/cnam_soap.fig: update cnam project doc
	* doc/projects/cnam_sua.fig: update cnam project doc
	* doc/projects/cnam_tua.fig: update cnam project doc
	* doc/specs/sli/sli.texi: correction
	* doc/specs/tci/tci.texi: fixups
	* doc/specs/tci/tci_fi10.fig: corrections